--- a/CSS/payment.css
+++ b/CSS/payment.css
@@ -73,8 +73,11 @@ input{
     border: none;
 }
 iframe{
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
     position: absolute;
-    margin:50em 1em 1em -1em; 
+    bottom: 0%;
     width: 100%;
   }
 .header{
