--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -7,7 +7,7 @@ footer{
     padding: 1px;
     justify-items: center;
     text-align: center;
-    overflow: scroll;
+    overflow: auto;
 
 }
 
@@ -24,7 +24,6 @@ footer{
     margin: 5px;
     border-radius: 5px;
     white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+    overflow: auto;
     max-height: 20px;
 }
