--- a/CSS/musicasonando.css
+++ b/CSS/musicasonando.css
@@ -1,5 +1,6 @@
 html{
     width: auto;
+    overflow-x: hidden;
 }
 body{
     background-color: black;
@@ -163,14 +164,21 @@ i{
     padding: 1%;
 }
 .reproductor{
-    border: 5px solid purple;
+    width: 95%;
+    border: 1px solid black;
+    margin-left: auto;
+    margin: 3% 3%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    vertical-align: center;
-    width: 98%;
+    align-items: center;
+}
+.reproductor .circle {
     height: 0px;
-    margin: 2em 1em 2em 1em;
+    width: 100%;
+    border: 2px solid purple;
+    display: flex;
+    margin: 0px 25px;
+    justify-content: center;
 }
 /* Estilos para tablet (ancho máximo de 768px) */
 @media screen and (max-width: 821px) {
