--- a/CSS/vistapantallaprincipal.css
+++ b/CSS/vistapantallaprincipal.css
@@ -1,215 +1,225 @@
+/* Colores principales */
+html{
+    overflow-x: hidden;
+}
+body {
+    height: auto;
+    background-color: black; /* Fondo negro */
+    color: purple;
+    margin: auto; /* Texto en morado */
+}
 
-    .body{
-        display: grid;
-        grid-template-areas: 
-            "b a a a a"
-            "b c c c c"
-            "b c c c c"
-            "d d d d d";
-        
-        justify-content: space-around;
-        align-items: start;
-        min-height: 100vh;
-    }
-    header {
-        grid-area: a;
-    }
-    .navegador {
-        grid-area: b;
-    }
-    .cuerpo-principal {
-        grid-area: c;
-    }
-    iframe {
-        grid-area: d;
-    }
+/* Estilos para los botones */
+input[type="button"] {
+    background-color: purple; /* Fondo morado */
+    color: black; /* Texto en negro */
+}
 
-    /* Header */
-    header{
-        position: relative;
-        width: 100%;
-        border: 1px solid black;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-between;
-    }
+/* Estilos para los enlaces */
+a {
+    color: purple; /* Color morado para enlaces */
+    display: flex;
+    height: 100%;
+    align-items: start;
+    vertical-align: center;
+}
 
-    header span {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: space-between;
-    }
+nav{
+    display: flex;
+    height:20%;
+    width: 100%;
+}
 
-    h1{
-        flex: 1;
-        vertical-align: middle;
-    }
+ul{
+    border: 1px solid black;
+    height: 50%;
+    width: 100%;
+    padding: 0px;
+}
+
+li:hover {
+    background-color: #992323; /* Cambia el color de fondo al pasar el mouse por encima */
+}
+
+li {
+    list-style-type: none;
+}
+
+li a {
+    margin-top: 2px;
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+}
+header {
+    grid-area: a;
+}
+.navegador {
+    grid-area: b;
+}
+.cuerpo-principal {
+    grid-area: c;
+}
+iframe {
+    margin-top: 5%;
+    grid-area: d;
+    height: 100%;
+}
+/* Header */
+header{
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+header span {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+}
+h1{
+    flex: 1;
+    vertical-align: middle;
+}
+
+h2{
+    white-space: nowrap;
+    vertical-align: middle;
+}
+
+.body{
+    display: grid;
+    grid-template-areas: 
+        "b a a a a"
+        "b c c c c"
+        "b c c c c"
+        "d d d d d";
     
-    h2{
-        white-space: nowrap;
-        vertical-align: middle;
-    }
+    justify-content: space-around;
+    align-items: start;
+}
+
+.cerrarsesion{
+    vertical-align: middle;
+    width: auto;
+}
+
+.imgperfil{
+    height: 50px;
+    width: 50px;
+    align-items: end;
+    padding: 10px;
+}
+.imgperfil img {
+    border: #000 2px solid;
+}
+.buscador{
+    flex: 1;
     
-    .cerrarsesion{
-        vertical-align: middle;
-        width: auto;
-    }
-    
-    .imgperfil{
-        height: 50px;
-        width: 50px;
-        align-items: end;
-        padding: 10px;
-    }
+    display: flex;
+}
+.buscadorinput{
+    width: 50%;
+}
+/* Fin Header */
 
-    .imgperfil img {
-        border: #000 2px solid;
-    }
+/* NAV */
+.navegador {
+    padding: 3%;
+    /* width:100%; */
+}
 
-    .buscador{
-        flex: 1;
-        
-        display: flex;
-    }
+.sectionimgbajonav{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+}
 
-    .buscadorinput{
-        width: 50%;
-    }
+.imagenbajonav{
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+.sectionimgbajonav article {
+    max-height: 200px;
+    overflow: scroll;
+}
 
-    /* Fin Header */
- 
-    /* NAV */
-    .navegador {
-        width:100%;
-    }
-    nav{
-        display: flex;
-        height:20%;
-        width: 100%;
-    }
-    
-    ul{
-        border: 1px solid black;
-        height: 50%;
-        width: 100%;
-        padding: 0px;
-    }
+/* Fin NAV */
 
-    li:hover {
-        background-color: #992323; /* Cambia el color de fondo al pasar el mouse por encima */
-    }
-    
-    li {
-        list-style-type: none;
-    }
+/* Cuerpo Principal */
+.cuerpo-principal {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+} 
+.albumes {
+    position: relative;
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: repeat(3, 1fr); /* 3 columnas de tamaño igual */
+    grid-template-rows: repeat(4, 1fr); /* 4 filas de tamaño igual */
+    gap: 10%;
+    height: 480px;
+    overflow: auto;
+    gap: 10px;
+    overflow-y:auto;
+    min-height: 60vh;
+}
 
-    li a {
-        margin-top: 2px;
-        text-decoration: none;
-        width: 100%;
-        text-align: center;
-        padding: 10px;
-    }
-    
-    .sectionimgbajonav{
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        width: 100%;
-    }
-    
-    .imagenbajonav{
-        position: relative;
-        height: 100%;
-        width: 100%;
-    }
+.article-img {
+    position: relative;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 18px;
+    text-align: center;
+    display: grid;
+    gap: 1px 1px;
+}
 
-    .sectionimgbajonav article {
-        max-height: 200px;
-        overflow: scroll;
-    }
-    
-    /* Fin NAV */
-    
-    /* Cuerpo Principal */
+.img-albumes {
+    width: 100%;
+    height: 100%;
+}
+.reproductor{
+    width: 95%;
+    border: 1px solid black;
+    margin-left: auto;
+    margin: 3% 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.reproductor .circle {
+    height: 0px;
+    width: 100%;
+    border: 2px solid purple;
+    display: flex;
+    margin: 0px 25px;
+    justify-content: center;
+}
 
-    .cuerpo-principal {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    } 
+.estrella-cancion{
+    position: absolute;
+    right: 1%;
+    top: 3%;
+}
 
-    .albumes {
-        position: relative;
-        display: grid;
-        justify-content: space-around;
-        grid-template-columns: repeat(3, 1fr); /* 3 columnas de tamaño igual */
-        grid-template-rows: repeat(4, 1fr); /* 4 filas de tamaño igual */
-        gap: 10%;
-        height: 480px;
-        overflow: auto;
-        gap: 10px;
-        border: 1px solid black;
-        overflow-y:auto;
-        min-height: 60vh;
+.estrella-album{
+    position: absolute;
+    right: 10%;
+    top: 10%;
+}
+/* Fin Cuerpo Principal */
 
-    }
-   
-    
-    .article-img {
-        position: relative;
-        margin-left: 5%;
-        margin-right: 5%;
-        padding: 18px;
-        text-align: center;
-        display: grid;
-        gap: 1px 1px;
-    }
-    
-    .img-albumes {
-        width: 100%;
-        height: 100%;
-    }
-
-    .reproductor{
-        width: 100%;
-        border: 1px solid black;
-        margin-left: auto;
-        margin: 15px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .reproductor .circle {
-        height: 0px;
-        width: 100%;
-        border: 2px solid purple;
-        display: flex;
-        margin: 0px 25px;
-        justify-content: center;
-    }
-
-    
-    .estrella-cancion{
-        position: absolute;
-        right: 1%;
-        top: 3%;
-    }
-    
-    .estrella-album{
-        position: absolute;
-        right: 10%;
-        top: 10%;
-    }
-
-    /* Fin Cuerpo Principal */
-
-    /* Estilos para pantallas más pequeñas (tabletas) */
+/* Estilos para pantallas más pequeñas (tabletas) */
 @media (max-width: 768px) {
     .body {
         display: grid;
@@ -236,6 +246,13 @@
         grid-template-columns: repeat(2, 1fr); 
         grid-template-rows: repeat(3, 1fr); 
     }
+    iframe {
+        grid-area: d;
+        height: 15em;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
 
 }
 
@@ -260,32 +277,27 @@
         grid-template-columns: repeat(1, 1fr); 
         grid-template-rows: repeat(6, 1fr); 
     }
-   
+    iframe {
+        grid-area: d;
+        height: 50em;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        margin-top: 15%;
+    }
+   /* iframe{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: 15%;
+    
+   } */
 }
 
 /* Estilos generales que aplican a todas las resoluciones */
 /* Agrega aquí tus estilos generales que aplican en todas las resoluciones */
 
-/* Colores principales */
-body {
-    background-color: black; /* Fondo negro */
-    color: purple; /* Texto en morado */
-}
 
-/* Estilos para los botones */
-input[type="button"] {
-    background-color: purple; /* Fondo morado */
-    color: black; /* Texto en negro */
-}
-
-/* Estilos para los enlaces */
-a {
-    color: purple; /* Color morado para enlaces */
-    display: flex;
-    height: 100%;
-    align-items: start;
-    vertical-align: center;
-}
 
 /* Resto de estilos específicos para esta vista */
 /* Agrega aquí los estilos específicos para esta vista */
