Footer casi finalizado (#8)
* cancion sonando fixeada. falta vista tablet y cel

* musica sonando fixeada

* minor fix in musica sonando

* cambios en footer y detalle en el reprod de musica

--- a/CSS/payment.css
+++ b/CSS/payment.css
@@ -73,11 +73,8 @@ input{
     border: none;
 }
 iframe{
-    display: flex;
-    flex-direction: column;
-    justify-content: stretch;
     position: absolute;
-    bottom: 0%;
+    margin:50em 1em 1em -1em; 
     width: 100%;
   }
 .header{
