--- a/CSS/planespremium.css
+++ b/CSS/planespremium.css
@@ -31,9 +31,8 @@ html{
         display: flex;
         flex-direction: column;
         justify-content: stretch;
+        height: 30%;
         margin: 2% 0%;
-        position: absolute;
-        bottom: 0%;
     }
     
     /* Header */
