--- a/CSS/musicasonando.css
+++ b/CSS/musicasonando.css
@@ -1,322 +1,53 @@
-html{
-    width: auto;
-    overflow-x: hidden;
-}
-body{
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: black;
-    overflow-x: hidden;
-    width: 100%;
-    margin: 0%;
-    color: purple;
-}
-nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    text-align: center;
-    text-decoration: none;
-    height:20%;
-    width: 100%;
-}
-audio{
-    background-color: black;
-}
-li {
-    list-style-type: none;
-}
 
-li{
-    margin-top: 2px;
-    text-decoration: none;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-}
-a{
-    text-decoration: none;
-}
-a:hover{
-    color: white;
-}
-
-/* Header */
-header{
-    position: relative;
-    width: auto;
-    border: 1px solid black;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-header span {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-between;
-}
-
-h1{
-    flex: 1;
-    vertical-align: middle;
-}
-
-h2{
-    white-space: nowrap;
-    vertical-align: middle;
-}
-
-.cerrarsesion{
-    vertical-align: middle;
-    width: auto;
-}
-
-.imgperfil{
-    height: 50px;
-    width: 50px;
-    align-items: end;
-}
-
-/* Fin Header */
-.container-canciones{
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    margin: 0px 0px;
-}
+.navegador {margin-right: 20px;}
 .canciones {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 10% 40% 30% 10% 10%;
     grid-template-rows: repeat(10, 10%);
     height: 480px; /* Esto limita la altura del contenedor */
-    width: 95%;
+    width: 80vw;
     overflow-y: scroll; /* Agrega una barra de desplazamiento vertical */
     gap: 0px; /* Separación entre las celdas */
 }
 
 .article-canciones {
-    border: 1px;
-    border-color: blueviolet;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    border: 1px solid rgba(255, 0, 0, 0.596);
     position: relative;
     text-align: center;
 }
 
-h1{
-    font-size: 2em;
-    text-align: center;
-}
-i{
-    align-self: center;
-}
-.imagen{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    position: relative;
-    align-self: center;
-}
-.image{
-    display: grid;
-    grid-column: 2;
-}
-.imagenbajonav{
-    /* height: 10%; */
-    background-color: red;
-    width: auto;
-}
-.estrella{
-    display: grid;
-    grid-column: 2;
-    position: absolute;
-    align-self: start;
-    margin: 2em 1em 1em 27em;
-}
-.estrella-album{
-    background-color: pink;
-    display: grid;
-    grid-column: 2;
-    width: 100%;
-    height: 10%;
-    position: absolute;
-}
-.estrella-cancion{
-    position: absolute;
-    margin: 0% 5% 0% 95%;
-}
-.fa-regular .fa-star .fa-2xl{
-    width: 1em;
-}
 .play-cancion{
     position: absolute;
     right: 50%;
     top: 20%;
 }
-.lorem{
-    padding: 1%;
-}
-.reproductor{
-    width: 95%;
-    border: 1px solid black;
-    margin-left: auto;
-    margin: 3% 3%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.reproductor .circle {
-    height: 0px;
-    width: 100%;
-    border: 2px solid purple;
-    display: flex;
-    margin: 0px 25px;
-    justify-content: center;
-}
-/* Estilos para tablet (ancho máximo de 768px) */
-@media screen and (max-width: 821px) {
-  
-    html{
-        background-color: auto;
-    }
-    body{
-        background-color: black;
-        overflow-x: hidden;
-    }
-    .article-canciones {
-        border: 1px;
-        border-color: blueviolet;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        position: relative;
-        text-align: center;
-    }
-    .container-canciones{
-        background-color: black;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: auto;
-        margin: 0px 0px;
-    }
-    .canciones {
-        background-color: black;
-        display: grid;
-        grid-template-columns: 20% 20% 20% 20% 20%;
-        grid-template-rows: repeat(10, 10%);
-        height: 480px; /* Esto limita la altura del contenedor */
-        width: 100%;
-        overflow-y: scroll; /* Agrega una barra de desplazamiento vertical */
-        overflow-x: hidden;
-        gap: 0px; /* Separación entre las celdas */
-        margin: 0px 0px;
-    }
-  }
 
-  @media screen and (max-width: 450px) {
+.estrella-cancion{
+    position: absolute;
+    right: 10%;
+}
+
+
+.estrella-cancion{
+    position: absolute;
+    right: 1%;
+    top: 3%;
+}
+
+.reproductor{
+    width: 90%;
+}
+
+/* Estilos para tablet (ancho máximo de 768px) */
+@media screen and (max-width: 768px) {
   
-    html{
-        background-color: auto;
-        overflow-x: hidden;
-    }
-    body{
-        background-color: black;
-        
-        width: 100%;
-    }
-    header{
-        align-items: end;
-    }
-    .imgperfil{
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        height: 100px;
-        width: 100px;
-    }
-    .imagen{
-        display: flex;
-        position: relative;
-        align-self: center;
-    }
-    .image{
-        width: 100%;
-    }
-    img{
-        width: 100%;
-    }
-    nav{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        text-decoration: none;
-        height:20%;
-        width: 100%;
-    }
-    ul{
-        margin: 0px;
-        padding: 0px;
-        list-style-type: none;
-        width:25%;
-    }
-    li{
-        margin: 0px;
-        padding:1% 1% 0% 1%;
-    }
-    .lorem{
-        padding: 5%;
-    }
-    .article-canciones {
-        border: 1px;
-        border-color: blueviolet;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        position: relative;
-        text-align: center;
-    }
-    .container-canciones{
-        background-color: black;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: auto;
-        margin: 0px 0px;
-    }
     .canciones {
-        display: grid;
-        grid-template-columns: 8% 23% 23% 20% 26%;
-        grid-template-rows: repeat(10, 10%);
-        height: 480px; /* Esto limita la altura del contenedor */
-        width: 100%;
-        overflow-y: scroll; /* Agrega una barra de desplazamiento vertical */
-        overflow-x: hidden;
-        gap: 0px; /* Separación entre las celdas */
-        margin: 0px 0px;
+      margin-left: 0; /* Eliminar el margen izquierdo */
+      margin-top: 0; /* Eliminar el margen superior */
+      width: 100%; /* Cambiar el ancho de la sección de canciones */
+      height: auto; /* Cambiar la altura a automática */
+      margin: 20px;
     }
-    .estrella{
-        display: grid;
-        grid-column: 2;
-        position: absolute;
-        align-self: start;
-        margin: 2em 1em 1em 19em;
-    }
-    .reproductor{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        vertical-align: center;
-        width: 98%;
-        height: 0px;
-        margin: 2em 1em 2em 1em;
-    }
+  
   }
   
