--- a/CSS/vistapantallaprincipal.css
+++ b/CSS/vistapantallaprincipal.css
@@ -278,12 +278,12 @@ h2{
         grid-template-rows: repeat(6, 1fr); 
     }
     iframe {
-        grid-area: d;
-        height: 50em;
+        height: 100%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        margin-top: 15%;
+        margin-top: 1%;
     }
    /* iframe{
     display: flex;
