agrego modal a vista pagar

--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -10,6 +10,9 @@
     justify-content: center;
     align-items: center; /* Add this line */
 }
+.modal h2 {
+    min-width: 250px;
+}
 
 .modalButtons {
     display: flex;
